crates/oxc_react_compiler/tests/snapshots/error.invalid-hoisting-setstate.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-hoisting-setstate.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot access variable before it is declared", labels: [LabeledSpan { label: Some("`setState` accessed before it is declared"), span: SourceSpan { offset: 766, length: 8 }, primary: false }, LabeledSpan { label: Some("`setState` is declared here"), span: SourceSpan { offset: 801, length: 8 }, primary: false }], help: Some("`setState` is accessed before it is declared, which prevents the earlier access from updating when this value changes over time"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
