crates/oxc_react_compiler/tests/snapshots/error.invalid-hook-function-argument-mutates-local-variable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-hook-function-argument-mutates-local-variable.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `cache` after render"), span: SourceSpan { offset: 102, length: 42 }, primary: false }, LabeledSpan { label: Some("This modifies `cache`"), span: SourceSpan { offset: 114, length: 5 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `cache` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
